fixed gap in navbar

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,10 +7,11 @@ body {
   position: fixed;
   top: 0;
 }
+/*
 .pull-right{
   margin-left: 20%;
   color: white;
-}
+}*/
 
 .navbar{
   left: 0;
@@ -42,6 +43,7 @@ a {
   padding-left: 2%;
   box-sizing:border-box;
   box-shadow: 2px 2px 10px black;
+  margin-right: 15px;
 }
 /*
 input.btn.btn-primary {
